# bot_solana

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  estrategias.md  fetch_pools.py  plan_4_estrategias.md  plan_agave.md  plan_arb_1.md  plan_ingresos.md  plan_lat.md  plan_maestro_spy_node.md  plan_modelos.md  plan_solanacdn.md  plan_solanacdn_v2.md  test_clmm  test_clmm.rs  update_pools.sh  validadores.md
agave-lite-core/: Cargo.toml
agave-lite-core/src/: account_cache.rs  feed.rs  grpc_subscriber.rs  lib.rs  pool_data_loader.rs
deploy/: MIGRATION.md  agave-watchdog.sh  cherry-servers-config.md  fast-snapshot.sh  helios-bot.service  helios.env.example  jito-shredstream-proxy.service  jito-shredstream-proxy.sh  ml_vault_priorities.json  setup.sh  sim-server.service  wait-agave-catchup.sh  wait-agave-tvu.sh
deploy/db-backup/: hot_routes.sql  onchain_arbs.sql  pool_performance.sql  redis-meta.json  restore-redis.sh  restore.sh
deploy/migrations/: 001_arb_trades.sql  schema.sql
deploy/systemd/: helios-bot.service  shred-mirror.service
executor/: Cargo.toml
executor/src/: alt_loader.rs  flash_loans.rs  helius_fast_sender.rs  helius_rebate.rs  jet_sender.rs  jito_sender.rs  jupiter_flash.rs  lib.rs  preflight.rs  rdtsc.rs  risk_manager.rs  rpc_pool.rs  simulator.rs  sniper.rs  telegram.rs  tpu_sender.rs  turbo_learner.rs  turbo_sender.rs  tx_builder.rs  ultra_executor.rs  volume_claimer.rs  volume_miner.rs  whale_backrun.rs
geyser-plugin/: Cargo.toml  gen_vaults.sh  gen_vaults_from_cache.py
geyser-plugin/src/: lib.rs
helios/: Cargo.toml
helios-ingest/: Cargo.toml
helios-ingest/src/: event_bus.rs  grpc_source.rs  lib.rs  richat_source.rs  shredstream_source.rs  types.rs
helios/src/: daily_report.rs  geyser_feed.rs  geyser_local.rs  main.rs  pool_scanner.rs  sqlite_route_feed.rs  ws_dex_feed.rs
market-engine/: Cargo.toml
market-engine/src/: backrun_calculator.rs  clmm_tick_arb.rs  cross_dex.rs  cyclic_arb.rs  dlmm_whirlpool_arb.rs  fee_tiers.rs  flash_selector.rs  fluxbeam.rs  jupiter_arb_scanner.rs  jupiter_limit_fill.rs  lib.rs  liquidation_scanner.rs  liquidity_events.rs  lst_scanner.rs  meteora.rs  ml_models.rs  new_pool_monitor.rs  openbook_decoder.rs  opportunity_scanner.rs  oracle.rs  orca.rs  pool_hydrator.rs  pool_state.rs  pool_validator.rs  predictive_arb.rs  pump_graduation_arb.rs  raydium_cpmm.rs  redis_cache.rs  route_engine.rs  rpc_pool_util.rs  saber.rs  scoring.rs  shred_delta_tracker.rs  shred_strategies.rs  signal_processor.rs  stablecoin_arb.rs  strategies.rs  swap_decoder.rs  types.rs  vault_watcher.rs  (+1 more)
mini-agave/: Cargo.toml
mini-agave/src/: grpc_feed.rs  main.rs  pool_loader.rs  tpu_sender.rs
ml-scorer/: Cargo.toml
ml-scorer/src/: graduation_predictor.rs  landing_predictor.rs  lib.rs  onchain_scanner.rs  pool_discoverer.rs  shred_predictor.rs  snapshot_scanner.rs  spread_predictor.rs  threehop_predictor.rs
programs/helios-arb/: Cargo.toml
programs/helios-arb/src/: lib.rs
programs/port-flash-receiver/: Cargo.toml
programs/port-flash-receiver/src/: lib.rs
scripts/: refresh_snapshot.sh
sim-server/: Cargo.toml
sim-server/src/: banks_backend.rs  blockhash_cache.rs  geyser_cache.rs  http_backend.rs  main.rs  tpu_sender.rs
spy-node/: Cargo.toml  build.rs
spy-node/proto/: auth.proto  searcher.proto  shredstream.proto
spy-node/protos/: shredstream.proto
spy-node/src/: blockhash_deriver.rs  config.rs  deduper.rs  fec_assembler.rs  gossip_client.rs  gossip_pong_responder.rs  jito_searcher_client.rs  jito_shredstream_client.rs  lib.rs  main.rs  metrics.rs  multi_shred_source.rs  shred_parser.rs  sig_verifier.rs  signal_bus.rs  solanacdn_client.rs  turbine_announcer.rs  tx_decoder.rs  udp_ingest.rs
strategy-logger/: Cargo.toml
strategy-logger/src/: lib.rs  types.rs  writer.rs
