[package]
name    = "helios-geyser-plugin"
version = "0.1.0"
edition = "2021"

[lib]
name = "helios_geyser_plugin"
crate-type = ["cdylib", "rlib"]

[dependencies]
agave-geyser-plugin-interface = "3.1"
solana-sdk       = "2.2"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
log              = "0.4"
dashmap          = "5"
