[package]
name        = "helios-ingest"
version     = "0.1.0"
edition     = "2021"
description = "Multi-source ingest: SolanaCDN + Yellowstone gRPC + Richat → unified event bus"

[lib]
name = "helios_ingest"
path = "src/lib.rs"

[[bin]]
name = "helios-ingest"
path = "src/bin/main.rs"

[dependencies]
# Solana
solana-sdk          = { workspace = true }
solana-entry        = { workspace = true }

# gRPC
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto  = { workspace = true }
tonic               = { workspace = true }
prost               = { workspace = true }
futures             = { workspace = true }

# Async
tokio               = { workspace = true }

# Data structures
dashmap             = { workspace = true }
lru                 = { workspace = true }
crossbeam-channel   = { workspace = true }

# Serialization
serde               = { workspace = true }
serde_json          = { workspace = true }
bincode             = { workspace = true }
toml                = { workspace = true }
bs58                = { workspace = true }

# Logging
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }

# Error handling
anyhow              = { workspace = true }

# Misc
chrono              = { workspace = true }
parking_lot         = { workspace = true }

# Internal
market-engine       = { path = "../market-engine" }
