[package]
name        = "sim-server"
version     = "0.1.0"
edition     = "2021"
description = "Helios – ultra-low-latency simulation proxy (BanksClient + HTTP/2 fallback)"

[[bin]]
name = "sim-server"
path = "src/main.rs"

[dependencies]
# Solana
solana-sdk             = { workspace = true }
solana-rpc-client      = { workspace = true }
solana-rpc-client-api  = { workspace = true }
solana-banks-client    = "1.18"
solana-banks-interface = "1.18"
solana-client          = "1.18"   # TpuClient (QUIC/UDP direct to validators)
solana-quic-client     = "1.18"  # QuicPool, QuicConnectionManager, QuicConfig

# HTTP server
axum          = { version = "0.7", features = ["http1", "http2", "json"] }
tower         = "0.4"
tower-http    = { version = "0.4", features = ["trace", "compression-gzip"] }
hyper         = { version = "1", features = ["full"] }

# Async runtime
tokio         = { workspace = true }
futures       = { workspace = true }

# HTTP client (pooled, HTTP/2)
reqwest       = { workspace = true, features = ["json"] }

# Serialization
serde         = { workspace = true }
serde_json    = { workspace = true }
bincode       = { workspace = true }
base64        = { workspace = true }
bs58          = { workspace = true }

# Geyser gRPC – real-time blockhash + account cache (optional, fallback-safe)
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto  = { workspace = true }

# Misc
anyhow        = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot   = { workspace = true }
async-trait   = "0.1"
dashmap       = { workspace = true }
