[package]
name        = "spy-node"
version     = "0.1.0"
edition     = "2021"
description = "Helios Gold V2 – UDP shred ingest, FEC assembly, TX decoding"

[[bin]]
name = "spy-node"
path = "src/main.rs"

[[bin]]
name = "shred-mirror"
path = "src/bin/shred_mirror.rs"

[lib]
name = "spy_node"
path = "src/lib.rs"

[dependencies]
solana-sdk          = { workspace = true }
solana-rpc-client   = { workspace = true }
solana-gossip       = { workspace = true }
solana-net-utils    = { workspace = true }
solana-streamer     = { workspace = true }
solana-ledger       = { workspace = true }
solana-entry        = { workspace = true }

crossbeam-channel   = { workspace = true }
dashmap             = { workspace = true }
lru                 = { workspace = true }
tokio               = { workspace = true }
anyhow              = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
bincode             = { workspace = true }
bs58                = { workspace = true }
reed-solomon-erasure = { workspace = true }
parking_lot         = { workspace = true }
rand                = { workspace = true }
hex                 = { workspace = true }
thiserror           = { workspace = true }
clap                = { workspace = true }
libc                = { workspace = true }
core_affinity       = { workspace = true }
mimalloc            = { workspace = true }
bytes               = "1"
futures             = { workspace = true }
tonic               = { workspace = true }
prost               = { workspace = true }
prost-types         = { workspace = true }
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto  = { workspace = true }

[build-dependencies]
tonic-build         = "0.9"
