[package]
name        = "strategy-logger"
version     = "0.1.0"
edition     = "2021"
description = "Helios – Async PostgreSQL strategy logger for ML training"

[lib]
name = "strategy_logger"
path = "src/lib.rs"

[dependencies]
crossbeam-channel = { workspace = true }
tokio              = { workspace = true }
tokio-postgres     = { workspace = true }
chrono             = { workspace = true }
tracing            = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
solana-sdk         = { workspace = true }
anyhow             = { workspace = true }
